--- a/JOURNAL/.index.yaml
+++ b/JOURNAL/.index.yaml
@@ -1,6 +1,6 @@
 ---
-title:    Instruments Journal
-author:   Thanasis N
+title:    Broad Band Instruments Journal
+author:   Laboratory of Atmospheric Physics
 geometry: "a4paper,left=1.3cm,right=1.3cm,top=1.3cm,bottom=1.3cm"
 
 header-includes: |
