--- a/JOURNAL/Makefile
+++ b/JOURNAL/Makefile
@@ -1,5 +1,5 @@
 
-.PHONY := preprocess
+.PHONY: preprocess
 .DEFAULT_GOAL := all
 all: pdf html
 
@@ -14,48 +14,35 @@ Readme.md: $(markdowns)
 
 
 ## create pdf file
-TARGET = Journal.pdf
-pdf: $(TARGET)
-$(TARGET): Makefile Readme.md
-	-pandoc                           \
-	  --standalone                    \
-	  --listings                      \
-	  --highlight-style kate          \
-	  --metadata-file   .index.yaml   \
-	  --from            markdown      \
-	  --to              pdf           \
-	  --lua-filter      .columns.lua  \
-	  --pdf-engine      xelatex       \
-	  --pdf-engine-opt  "-shell-escape" \
-	  --out             '$@'          \
+TARGET_pdf = Journal.pdf
+pdf: $(TARGET_pdf)
+$(TARGET_pdf): Makefile Readme.md
+	-pandoc                             \
+	  --standalone                      \
+	  --listings                        \
+	  --highlight-style kate            \
+	  --metadata-file   .index.yaml     \
+	  --from            markdown        \
+	  --to              pdf             \
+	  --lua-filter      .columns.lua    \
+	  --pdf-engine      xelatex         \
+	  --pdf-engine-opt="-shell-escape"  \
+	  --out             '$(TARGET_pdf)' \
 	  Readme.md
 
 
-# ## create doc file
-# TARGET = Journal.odt
-# odt: $(TARGET)
-# $(TARGET): Makefile Readme.md
-# 	-pandoc                           \
-# 	  --standalone                    \
-# 	  --metadata-file   .index.yaml   \
-# 	  --from            markdown      \
-# 	  --to              odt           \
-# 	  --out             '$@'          \
-# 	  Readme.md
-
-
 ## create html file
-TARGET = Journal.html
-html: $(TARGET)
-$(TARGET): Makefile Readme.md
-	-pandoc                           \
-	  --standalone                    \
-	  --metadata-file   .index.yaml   \
-	  --mathjax                       \
-	  --lua-filter      .columns.lua  \
-	  --from            markdown      \
-	  --to              html          \
-	  --out             '$@'          \
+TARGET_html = Journal.html
+html: $(TARGET_html)
+$(TARGET_html): Makefile Readme.md
+	-pandoc                              \
+	  --standalone                       \
+	  --metadata-file   .index.yaml      \
+	  --mathjax                          \
+	  --lua-filter      .columns.lua     \
+	  --from            markdown         \
+	  --to              html             \
+	  --out             '$(TARGET_html)' \
 	  Readme.md
 
 
